# solitare-bevy

./: Cargo.toml  readme.md
src/: game.rs  main.rs  menus.rs  mouse_input.rs
